// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider   = "prisma-dbml-generator"
  output     = "./dbml"
  outputName = "db.dbml"
}

model User {
  id           Int               @id @default(autoincrement())
  email        String
  userTags     UserTag[]
  userAccounts UserBankAccount[]
  transactions Transaction[]
}

model UserBankAccount {
  // Bank account of the user
  id          Int           @id @default(autoincrement())
  User        User          @relation(fields: [userId], references: [id])
  userId      Int
  Transaction Transaction[]
}

model Transaction {
  id            Int              @id @default(autoincrement())
  date          DateTime
  bankAccount   UserBankAccount? @relation(fields: [bankAccountId], references: [id])
  bankAccountId Int?
  tag           UserTag?         @relation(fields: [tagId], references: [id])
  tagId         Int
  User          User?            @relation(fields: [userId], references: [id])
  userId        Int?
}

model UserTag {
  id                Int           @id @default(autoincrement())
  name              String
  description       String?
  user              User          @relation(fields: [userId], references: [id])
  userId            Int
  usedInTransaction Transaction[]
}
