//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [not null]
  userTags UserTag [not null]
  userAccounts UserBankAccount [not null]
  transactions Transaction [not null]
}

Table UserBankAccount {
  id Int [pk, increment]
  User User [not null]
  userId Int [not null]
  Transaction Transaction [not null]
}

Table Transaction {
  id Int [pk, increment]
  date DateTime [not null]
  bankAccount UserBankAccount
  bankAccountId Int
  tag UserTag
  tagId Int [not null]
  User User
  userId Int
}

Table UserTag {
  id Int [pk, increment]
  name String [not null]
  description String
  user User [not null]
  userId Int [not null]
  usedInTransaction Transaction [not null]
}

Ref: UserBankAccount.userId > User.id

Ref: Transaction.bankAccountId > UserBankAccount.id

Ref: Transaction.tagId > UserTag.id

Ref: Transaction.userId > User.id

Ref: UserTag.userId > User.id